# aoc2023

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs  justfile  tailwind.config.js
assets/: tailwind.css
assets/layouts/: app.html  root.html
assets/templates/: day07.html  index.html  profile.html  solutions.html
src/: lib.rs  main.rs
src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  mod.rs
static/css/: tailwind.css
