[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc2023"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
axum = "0.6.20"
minijinja = { version = "1.0.10", features = ["builtins"] }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.28.2", features = ["rt", "macros", "rt-multi-thread"] }
tower-http = { version = "0.4.4", features = ["fs"] }
tracing = "0.1.40"
