[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc2023"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "aoc2023-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7.2", features = ["tokio"] }
ctrlc = "3.4.1"
minijinja = { version = "1.0.10", features = ["builtins"] }
num = "0.4.1"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["rt", "macros", "rt-multi-thread", "process"] }
tower-http = { version = "0.5.0", features = ["fs"] }
tracing = "0.1.40"

[profile.release]
lto = true
overflow-checks = false
